[UPDATE] new READ ME file is better