@@ -1,9 +1,25 @@
-### Silwyne Chess
-This project is written fully in Java with javafx library.
+# Silwyne Chess
 
-It now has only one set of pieces but many themes and colors for the board.
-At the beginning of the game it ask you to confirm the default theme and style for the board or you can just easily change it.
+JDK version = 17\
+MVN version = 3.9.8
 
-I hope someday i get a domain name for it as the web version.
-or maybe on socket.
-or maybe AI improvements.
+This project is written fully in `Java` with `Java fx`!
+
+I always loved making 2d games, and I think I am starting it making a Chess game.\
+I made this project to get better in using `Java fx`.
+I wanted to know if Java fx is a good choice for making 2dGames or not.\
+And I think the answer of this question is `NO` for 2D games like `Mario` or `Ori`,
+but `YES` for games like Chess!
+
+That's why I am going to make my new game in `Java Swing`.
+
+I would keep this project in hand until I complete its AI part. :)
+
+## Running the Application
+- Make sure you have all the Dependencies in pom file. `mvn install`
+- Install `Java fx` on your System based on if it is Linux or Windows there are different versions.\
+guide: I have something like this `javafx-sdk-17.0.11` on my Debian!
+- I have this 'vm option' in my build and run configuration.\
+`--module-path /path/to/javafx-sdk-17.0.11/lib --add-modules=javafx.controls`\
+That's why I said you have to install `Java fx` :)
+- There would be no problem for running this Application anymore!
